--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,167 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Image from "astro/components/Image.astro";
+import Layout from "../layouts/Layout.astro";
+import foto from "../assets/img/fotoLinke.png";
+import ProjetCard from "../components/ProjetCard.astro";
+import Skill from "../components/Skill.astro";
+import Experiencie from "../components/Experiencie.astro";
+import DowloadIcon from "../components/Icons/DowloadIcon.astro";
+import ButtonPrimary from "../components/Buttons/ButtonPrimary.astro";
+import MailIcon from "../components/Icons/MailIcon.astro";
+import Footer from "../components/Footer.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+<Layout title="David Mosquera">
+  <div class="relative">
+    <div class="bg-gradient-to-r from-[#F05E52] to-[#2FA3A8] w-full h-40"></div>
+    <main class="absolute w-full top-14 lg:top-32 px-2 md:px-16 lg:px-64">
+      <section
+        class="w-full flex flex-col lg:flex-row gap-2 text-center lg:text-start justify-between items-center p-3 border-b border-gray-200"
+      >
+        <div class="flex flex-col lg:flex-row items-center gap-x-4">
+          <div
+            class="h-32 w-32 flex items-center justify-center rounded-full overflow-hidden"
+          >
+            <Image
+              src={foto}
+              class="w-full h-auto object-cover"
+              alt="Foto de Brayan David"
+            />
+          </div>
+          <header class="space-y-2">
+            <div class="space-y-1">
+              <h1 class="text-3xl font-bold">Brayan David Mosquera Medina</h1>
+              <span class="text-gray-700">Frontend Developer</span>
+            </div>
+            <div
+              class="flex gap-1 items-center justify-center lg:justify-start text-gray-700"
+            >
+              <MailIcon size="24" />
+              <span>david.mosquera.dev@gmail.com</span>
+            </div>
+          </header>
+        </div>
+        <a href="/public/Curriculum.pdf" download="David Mosquera">
+          <ButtonPrimary>
+            <DowloadIcon size="24" />
+            Descargar CV
+          </ButtonPrimary>
+        </a>
+      </section>
+      <div class="w-full"></div>
+      <section class="p-3 border-b border-gray-200 space-y-2">
+        <h2 class="text-xl font-bold">Sobre mi</h2>
+        <p class="text-gray-700">
+          Soy desarrollador frontend con experiencia en Vue.js, Nuxt 3 y
+          Tailwind CSS. Me apasiona crear interfaces intuitivas y atractivas,
+          asegurando eficiencia y coherencia en cada proyecto. He trabajado en
+          la implementación de sistemas de diseño desde cero para estandarizar
+          componentes y mejorar la experiencia del usuario. Además, me
+          desenvuelvo en entornos ágiles con Scrum, participando activamente en
+          sprints y revisiones de código. También manejo Git para el control de
+          versiones, lo que me ha permitido entender y aportar al flujo completo
+          de desarrollo de aplicaciones.
+        </p>
+      </section>
+      <section class="pt-5">
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+          <ProjetCard
+            demo="https://membretes.vercel.app/"
+            code="https://github.com/Brayanmosquera345/membretesapp"
+            src="https://res.cloudinary.com/dlmhszrtv/image/upload/v1743581660/mokups_guvmzn.png"
+            title="Membretes"
+            description="Este es un proyecto de Membretes que realice con Vue.js, Pinia, Tailwind CSS y usando la libreria PDF-lib para generar el membrete con los datos del usuario"
+          />
+        </div>
+      </section>
+      <section class="pt-5 px-2">
+        <h2 class="text-xl font-bold">Habilidades</h2>
+        <div class="flex gap-2 py-4 flex-wrap">
+          <Skill skill="Vue.js" />
+          <Skill skill="Nuxt 3" />
+          <Skill skill="State Management (Pinia)" />
+          <Skill skill="TypeScript" />
+          <Skill skill="Tailwind CSS" />
+          <Skill skill="Astro" />
+          <Skill skill="Node.js" />
+          <Skill skill="Express.js" />
+          <Skill skill="TanStack Query" />
+          <Skill skill="Storybook" />
+          <Skill skill="Vitest" />
+          <Skill skill="Git" />
+          <Skill skill="Bitbucket" />
+          <Skill skill="Jira" />
+          <Skill skill="Front-end Architecture" />
+          <Skill skill="UI/UX Enhancements" />
+          <Skill skill="Responsive Design" />
+          <Skill skill="Atomic Design" />
+          <Skill skill="Figma" />
+        </div>
+      </section>
+      <section class="pt-4 px-2">
+        <h2 class="text-xl font-bold">Experiencia</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 py-5">
+          <Experiencie
+            title="Frontend Developer / Metrix LA"
+            date="Agosto 2024 - Actualidad"
+          >
+            Esta experiencia me ha permitido combinar habilidades técnicas y de
+            diseño con una mentalidad estratégica, contribuyendo al crecimiento
+            del equipo y asegurando soluciones ágiles y efectivas.
+            <ul class="list-disc px-4 py-2">
+              <li>
+                Optimicé la UI con Vue.js, Nuxt 3 y Tailwind, mejorando la
+                usabilidad y reduciendo tiempos de carga.
+              </li>
+              <li>
+                Desarrollé componentes reutilizables en Figma con soporte para
+                modo claro/oscuro.
+              </li>
+              <li>
+                Implementé pruebas automatizadas con Vitest para asegurar
+                calidad y estabilidad.
+              </li>
+              <li>
+                Colaboré en la creación de un sistema de diseño estandarizado.
+              </li>
+              <li>
+                Participé en sprints y revisiones de código bajo la metodología
+                Scrum.
+              </li>
+              <li>
+                Brindé apoyo técnico al equipo, fomentando el aprendizaje
+                colaborativo.
+              </li>
+            </ul>
+          </Experiencie>
+          <Experiencie
+            title="Frontend Developer / LIAN BPO"
+            date="Febrero 2024 - Agosto 2024"
+          >
+            Durante mi tiempo en LIAN BPO, tuve la oportunidad de crecer como
+            desarrollador frontend, aplicando mis conocimientos para crear
+            interfaces eficientes y colaborando en la optimización de
+            aplicaciones.
+            <ul class="list-disc px-4 py-2">
+              <li>
+                Diseñé e implementé interfaces con Vue.js y Tailwind CSS,
+                mejorando la experiencia de usuario.
+              </li>
+              <li>
+                Trabajé en equipo bajo la metodología Scrum, participando en
+                sprints y revisiones de código para optimizar aplicaciones.
+              </li>
+              <li>
+                Utilicé Git para el control de versiones, comprendiendo el flujo
+                completo de desarrollo.
+              </li>
+            </ul>
+            Esta experiencia fortaleció mis habilidades en diseño, programación y
+            trabajo en equipo dentro de un entorno profesional.
+          </Experiencie>
+        </div>
+      </section>
+      <Footer />
+    </main>
+  </div>
 </Layout>
-
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
-</style>
