--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import Footer from "../components/Footer.astro";
             </div>
           </header>
         </div>
-        <a href="/public/Curriculum.pdf" download="David Mosquera">
+        <a href="/Curriculum.pdf" download="David Mosquera">
           <ButtonPrimary>
             <DowloadIcon size="24" />
             Descargar CV
@@ -52,15 +52,11 @@ import Footer from "../components/Footer.astro";
       <section class="p-3 border-b border-gray-200 space-y-2">
         <h2 class="text-xl font-bold">Sobre mi</h2>
         <p class="text-gray-700">
-          Soy desarrollador frontend con experiencia en Vue.js, Nuxt 3 y
-          Tailwind CSS. Me apasiona crear interfaces intuitivas y atractivas,
-          asegurando eficiencia y coherencia en cada proyecto. He trabajado en
-          la implementación de sistemas de diseño desde cero para estandarizar
-          componentes y mejorar la experiencia del usuario. Además, me
-          desenvuelvo en entornos ágiles con Scrum, participando activamente en
-          sprints y revisiones de código. También manejo Git para el control de
-          versiones, lo que me ha permitido entender y aportar al flujo completo
-          de desarrollo de aplicaciones.
+          Desde siempre he sido una persona curiosa; constantemente me he preguntado: ¿Cómo funciona esto? ¿Cómo funciona aquello? Esa curiosidad me llevó a convertirme en desarrollador frontend con experiencia en Vue.js, Nuxt 3 y Tailwind CSS.
+          <br>
+          Gracias a mi inquietud por aprender, me mantengo al día con nuevas herramientas y tecnologías, y no dudo en asumir nuevos retos, ya sea liderando una presentación, proponiendo soluciones innovadoras o explorando nuevas formas de optimizar el trabajo.
+          <br>
+          Me considero una persona visual, ya que antes de asumir un reto, siempre lo visualizo. No importa si se trata de diseñar una nueva interfaz o definir una arquitectura; me gusta imaginar su funcionalidad antes de plasmarla en código.
         </p>
       </section>
       <section class="pt-5">
@@ -70,7 +66,7 @@ import Footer from "../components/Footer.astro";
             code="https://github.com/Brayanmosquera345/membretesapp"
             src="https://res.cloudinary.com/dlmhszrtv/image/upload/v1743581660/mokups_guvmzn.png"
             title="Membretes"
-            description="Este es un proyecto de Membretes que realice con Vue.js, Pinia, Tailwind CSS y usando la libreria PDF-lib para generar el membrete con los datos del usuario"
+            description="Este proyecto de membretes nació con la idea de ofrecer una solución accesible que permita a empresas y particulares integrar su identidad de marca de forma profesional. Para su desarrollo, utilicé Vue.js, Pinia y Tailwind CSS, además de la biblioteca PDF-lib y vue-pdf, que facilita la creación de membretes personalizados con la información del usuario."
           />
         </div>
       </section>
