Se agrega el proyecto testor ninja

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,6 +68,13 @@ import Footer from "../components/Footer.astro";
             title="Membretes"
             description="Este proyecto de membretes nació con la idea de ofrecer una solución accesible que permita a empresas y particulares integrar su identidad de marca de forma profesional. Para su desarrollo, utilicé Vue.js, Pinia y Tailwind CSS, además de la biblioteca PDF-lib y vue-pdf, que facilita la creación de membretes personalizados con la información del usuario."
           />
+          <ProjetCard
+            demo="https://testorninja.vercel.app/"
+            code="https://github.com/Brayanmosquera345/testorninja"
+            src="https://res.cloudinary.com/dlmhszrtv/image/upload/v1753504213/mokups-testorninja_nkfmjy.png"
+            title="Testor Ninja"
+            description="Testor Ninja es una aplicación web que genera pruebas dinámicas de opción múltiple usando inteligencia artificial. El usuario ingresa un tema y un nivel, y la IA genera automáticamente un test de 10 preguntas. Al finalizar, el sistema califica las respuestas y genera un feedback personalizado con recomendaciones de estudio."
+          />
         </div>
       </section>
       <section class="pt-5 px-2">
@@ -93,7 +100,7 @@ import Footer from "../components/Footer.astro";
           <Skill skill="Atomic Design" />
           <Skill skill="Figma" />
         </div>
-      </section>
+      </section> 
       <section class="pt-4 px-2">
         <h2 class="text-xl font-bold">Experiencia</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 py-5">
