--- a/src/components/Buttons/ButtonPrimary.astro
+++ b/src/components/Buttons/ButtonPrimary.astro
@@ -1,6 +1,3 @@
----
-
----
-<button class="flex gap-2 bg-gray-900 text-white px-4 py-2 rounded-md hover:bg-gray-950 hover:shadow-sm">
+<button class="flex justify-center gap-2 bg-gray-900 text-white px-4 py-2 rounded-md hover:bg-gray-950 hover:shadow-sm text-center">  
     <slot />
 </button>
