--- a/src/components/ProjetCard.astro
+++ b/src/components/ProjetCard.astro
@@ -6,7 +6,7 @@ import EyeIcon from "./Icons/EyeIcon.astro";
 const { src, title, description, demo, code } = Astro.props;
 ---
 
-<section class="bg-gray-50 p-2 rounded-md">
+<section class="bg-white p-2 rounded-md border border-gray-300 hover:shadow-md hover:shadow-accent-100 hover:border-accent-100">
   <header>
     <a href={demo} target="_blank">
       <img class="h-auto w-full cursor-pointer rounded-md" src={src} alt="Linkedin" />
@@ -14,7 +14,7 @@ const { src, title, description, demo, code } = Astro.props;
   </header>
   <main class="sapce-y-2 py-1">
     <h2 class="text-lg font-bold">{title}</h2>
-    <p class="text-gray-700">{description}</p>
+    <p class="text-paragraph">{description}</p>
   </main>
   <footer class="flex justify-end items-center px-2 gap-2">
     <a href={code} target="_blank" >
