--- a/src/components/Skill.astro
+++ b/src/components/Skill.astro
@@ -2,6 +2,6 @@
 const { skill } = Astro.props
 ---
 
-<span class="border bg-slate-50 border-gray-300 text-gray-700 px-4 py-1 rounded-full">
+<span class="border bg-slate-50 border-gray-300 text-paragraph px-4 py-1 rounded-full">
     {skill}
 </span>
