--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,10 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <meta
+      name="keywords"
+      content="Brayan Mosquera, desarrollador frontend, portafolio web, programador Vue, animaciones CSS, diseño web moderno, páginas web profesionales, Tailwind CSS, Astro framework, JavaScript, HTML, CSS, Desarrollador en neiva"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
