fix(frontend) Se corrigen las rutas en el componente del slider

--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -1,6 +1,6 @@
 ---
 import Image from "astro/components/Image.astro";
-import vue from "../assets/img/vue.svg";
+import vue from "@/assets/img/vue.svg";
 import tailwind from "../assets/img/tailwind.svg";
 import astro from "../assets/img/astro.svg";
 import figma from "../assets/img/figma.svg";
@@ -8,8 +8,8 @@ import nuxt from "../assets/img/nuxt.svg";
 import git from "../assets/img/git.svg";
 import html from "../assets/img/html.svg";
 import css from "../assets/img/css.svg";
-import javascript from "../assets/img/javascript.svg";
-import typeScript from "../assets/img/typescript.svg";
+import javascript from "../assets/img/javaScript.svg";
+import typeScript from "../assets/img/typeScript.svg";
 import react from "../assets/img/react.svg";
 
 const logos = [
