--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -1,6 +1,6 @@
 ---
 import Image from "astro/components/Image.astro";
-import vue from "@/assets/img/vue.svg";
+import vue from "../assets/img/vue.svg";
 import tailwind from "../assets/img/tailwind.svg";
 import astro from "../assets/img/astro.svg";
 import figma from "../assets/img/figma.svg";
