feat(frontend) Se mejoran los metadatos de la web y se agrega la skill de react

--- a/src/sections/skills.astro
+++ b/src/sections/skills.astro
@@ -4,6 +4,7 @@ import Skill from "../components/Skill.astro";
 const skills = [
   "Vue.js",
   "Nuxt 3",
+  "react",
   "State Management (Pinia)",
   "TypeScript",
   "Tailwind CSS",
