feat(frontend) Se agrega el proyecto de dedicatorias y se cambian los mokups

--- a/src/sections/projects.astro
+++ b/src/sections/projects.astro
@@ -9,16 +9,23 @@ import ProjetCard from "../components/ProjetCard.astro";
   </header>
   <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 max-w-5xl">
     <ProjetCard
+      demo="https://dedicatorias-six.vercel.app"
+      code="https://github.com/Brayanmosquera345/dedicatorias-frontend"
+      src="https://res.cloudinary.com/dlmhszrtv/image/upload/v1756394526/Dedicatorias_jbiw2r.png"
+      title="Dedicatorias"
+      description="Dedicatorias es una aplicación web que permite que el usuario con un mensaje, una cación y una foto, genere una dedicatoria unica para un persona especial. Es un proyecto FullStack, con la interfaz de usuario construida con React, y el backend con Nest js y supabase."
+    />
+    <ProjetCard
       demo="https://membretes.vercel.app/"
       code="https://github.com/Brayanmosquera345/membretesapp"
-      src="https://res.cloudinary.com/dlmhszrtv/image/upload/v1743581660/mokups_guvmzn.png"
+      src="https://res.cloudinary.com/dlmhszrtv/image/upload/v1756394526/Membretes_q1kncp.png"
       title="Membretes"
       description="Este proyecto de membretes nació con la idea de ofrecer una solución accesible que permita a empresas y particulares integrar su identidad de marca de forma profesional. Para su desarrollo, utilicé Vue.js, Pinia y Tailwind CSS, además de la biblioteca PDF-lib y vue-pdf, que facilita la creación de membretes personalizados con la información del usuario."
     />
     <ProjetCard
       demo="https://testorninja.vercel.app/"
       code="https://github.com/Brayanmosquera345/testorninja"
-      src="https://res.cloudinary.com/dlmhszrtv/image/upload/v1753504213/mokups-testorninja_nkfmjy.png"
+      src="https://res.cloudinary.com/dlmhszrtv/image/upload/v1756394526/Testor_Ninja_blyqor.png"
       title="Testor Ninja"
       description="Testor Ninja es una aplicación web que genera pruebas dinámicas de opción múltiple usando inteligencia artificial. El usuario ingresa un tema y un nivel, y la IA genera automáticamente un test de 10 preguntas. Al finalizar, el sistema califica las respuestas y genera un feedback personalizado con recomendaciones de estudio."
     />
