--- a/src/sections/skills.astro
+++ b/src/sections/skills.astro
@@ -5,8 +5,11 @@ const skills = [
   "Vue.js",
   "Nuxt 3",
   "react",
+  "React Router",
   "State Management (Pinia)",
+  "State Management (Zustand)",
   "TypeScript",
+  "JavaScript",
   "Tailwind CSS",
   "Astro",
   "Node.js",
@@ -22,6 +25,8 @@ const skills = [
   "Responsive Design",
   "Atomic Design",
   "Figma",
+  "Nest",
+  "PostgreSQL",
 ];
 ---
 
