--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -21,7 +21,7 @@ import CloseIcon from "./Icons/CloseIcon.astro";
         <MenuIcon size="24" />
       </button>
       <div class="hidden md:block">
-        <a href="https://drive.google.com/file/d/12hngAXPdX_Cm4K1C7YhtR2z6KQYuXEoZ/view" target="_blank">
+        <a href="https://drive.google.com/file/d/1ZLNtP-asaXDxiYStzzG8EWmiZIQEwPcM/view?usp=drive_link" target="_blank">
           <ButtonPrimary>Descargar CV</ButtonPrimary>
         </a>
       </div>
